# floe

./: .deny.toml  .rustfmt.toml  Cargo.toml  README.md  justfile
src/: gcm.rs  lib.rs  result.rs  tests.rs  traits.rs  utils.rs
src/keys/: epoch_key.rs  floe_key.rs  message_key.rs  mod.rs
src/random_access/: decryptor.rs  encryptor.rs  mod.rs
src/tests/: helpers.rs  mod.rs
src/types/: floe_iv.rs  header.rs  mod.rs  segment.rs
src/types/header/: mod.rs  parameters.rs  tag.rs
