[package]
authors = ["Damir Jelić <poljar@termina.org.uk>"]
name = "floe-rs"
version = "0.1.0"
edition = "2024"
keywords = ["cryptography"]
license = "Apache-2.0"
rust-version = "1.93"

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(fuzzing)'] }
unsafe_code = "deny"
unreachable_pub = "deny"
# missing_docs = "deny"
dead_code = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
rust_2018_idioms = "deny"

[lints.clippy]
panic = "deny"
unreachable = "deny"
# expect_used = "deny"
# unwrap_used = "deny"
mem_forget = "deny"

[features]
default = ["std"]

std = []

[dependencies]
aead = "0.6.0-rc.10"
digest = { version = "0.11.2", features = ["mac"] }
subtle = "2.6.1"
rand = "0.10.0"
sha2 = "0.11.0"
hmac = "0.13.0"

[dev-dependencies]
aes-gcm = "0.11.0-rc.3"
hex = "0.4.3"
