[package]
authors = ["Damir Jelić <poljar@termina.org.uk>"]
name = "floe-rs"
version = "0.1.0"
edition = "2024"
keywords = ["cryptography", "floe", "online-encryption", "random-access"]
license = "Apache-2.0"
rust-version = "1.93"

[lints.rust]
unexpected_cfgs = { level = "deny", check-cfg = ['cfg(fuzzing)'] }
unsafe_code = "deny"
unreachable_pub = "deny"
# missing_docs = "deny"
dead_code = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
rust_2018_idioms = "deny"

[lints.clippy]
panic = "deny"
unreachable = "deny"
expect_used = "deny"
todo = "deny"
dbg_macro = "deny"
unwrap_used = "deny"
mem_forget = "deny"
std_instead_of_core = "deny"
std_instead_of_alloc = "deny"

[features]
default = ["std", "floe-gcm", "getrandom", "zeroize"]

std = ["thiserror/std"]
floe-gcm = ["dep:aes-gcm", "dep:sha2"]
getrandom = ["dep:getrandom"]
zeroize = ["dep:zeroize"]

[dependencies]
aead = "0.6.0-rc.10"
aes-gcm = { version = "0.11.0-rc.3", optional = true, default-features = false, features = ["aes"] }
digest = { version = "0.11.2", features = ["mac"] }
getrandom = { version = "0.4.2", optional = true, features = ["sys_rng"] }
hmac = "0.13.0"
hybrid-array = { version = "0.4.10", features = ["zerocopy"] }
rand_core = "0.10.0"
subtle = "2.6.1"
sha2 = { version = "0.11.0", optional = true }
thiserror = { version = "2.0.18", default-features = false }
zerocopy = { version = "0.8.48", features = ["derive"] }
zeroize = { version = "1.8.2", optional= true, features = ["zeroize_derive"] }

[dev-dependencies]
hex = "0.4.3"
pastey = "0.2.1"
